Fixed mobile nav and horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
   font-family: "Rubik", sans-serif;
   color: var(--main-text-clr);
   height: 100vh;
-
+  overflow-x: hidden;
   position: relative;
 }
 
